--- a/Calculator/Calculator/Calculator.vcxproj
+++ b/Calculator/Calculator/Calculator.vcxproj
@@ -152,6 +152,9 @@
     </ClInclude>
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="tcalculator.h" />
+    <ClInclude Include="tliststack.h" />
+    <ClInclude Include="tstack.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc" />
